--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -33,7 +33,7 @@ reference:
   
   - title: BAM file manipulation functions
     contents:
-      - run_sambamba
+      - run_sambambadup
       - run_samsort
       - run_samview
       - run_samindex
@@ -66,7 +66,6 @@ reference:
   - title: Miscellaneous functions
     contents:
       - run_great
-      - annotate_data
       
   
 
